--- a/repo/maven/trunk/master-hibernate-pom/pom.xml
+++ b/repo/maven/trunk/master-hibernate-pom/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>uk.ac.ebi.intact.maven</groupId>
         <artifactId>intact-master</artifactId>
-        <version>10</version>
+        <version>11-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
