--- a/master-pom/pom.xml
+++ b/master-pom/pom.xml
@@ -356,6 +356,18 @@
                 <enabled>false</enabled>
             </releases>
         </pluginRepository>
+
+        <pluginRepository>
+            <id>maven.shapshot</id>
+	        <name>Maven snapshot repository</name>
+			<url>http://people.apache.org/repo/m2-snapshot-repository</url>                 
+            <snapshots>
+               <enabled>true</enabled>
+            </snapshots>
+            <releases>
+               <enabled>false</enabled>
+            </releases>
+        </pluginRepository> 
     </pluginRepositories>
 
     <dependencies>
