--- a/master-pom/pom.xml
+++ b/master-pom/pom.xml
@@ -292,9 +292,9 @@
         </repository>
 
         <repository>
-	    <id>maven2-repository.dev.java.net</id>
+   	        <id>maven2-repository.dev.java.net</id>
             <name>Java.net Repository for Maven</name>
-	    <url>http://download.java.net/maven/2/</url>
+	        <url>http://download.java.net/maven/2/</url>
         </repository>
 
         <repository>
@@ -368,6 +368,11 @@
                <enabled>false</enabled>
             </releases>
         </pluginRepository> 
+
+         <pluginRepository>
+		    <id>maven-plugins.sourceforge</id>
+			<url>http://maven-plugins.sourceforge.net/repository</url>
+		 </pluginRepository>
     </pluginRepositories>
 
     <dependencies>
@@ -393,14 +398,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
             </plugin>
-
-            <!-- SNAPSHOT commented out
+            
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>jdepend-maven-plugin</artifactId>
-                <version>2.0-beta-1-SNAPSHOT</version>
+                <version>2.0-beta-1</version>
             </plugin>
-            -->
 
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -465,21 +468,22 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clover-plugin</artifactId>
             </plugin>
+            -->
 
+            <!--
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>1.0-beta-1</version>
+                 <groupId>maven-plugins</groupId>
+	             <artifactId>maven-findbugs-plugin</artifactId>
+		         <version>1.4</version>
                 <configuration>
                     <threshold>Normal</threshold>
                 </configuration>
             </plugin>
             -->
 
-            <!-- SNAPSHOT commented out
             <plugin>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.1-SNAPSHOT</version>
+                <version>2.2</version>
                 <configuration>
                     <rulesets>
                         <ruleset>/rulesets/basic.xml</ruleset>
@@ -490,12 +494,10 @@
                     <targetJdk>1.5</targetJdk>
                 </configuration>
             </plugin>
-            -->
 
         </plugins>
 
     </reporting>
-
 
     <distributionManagement>
         <repository>
