--- a/master-pom/pom.xml
+++ b/master-pom/pom.xml
@@ -373,6 +373,18 @@
 		    <id>maven-plugins.sourceforge</id>
 			<url>http://maven-plugins.sourceforge.net/repository</url>
 		 </pluginRepository>
+
+        <pluginRepository>
+            <id>java.net</id>
+            <url>http://download.java.net/maven/1</url>
+            <layout>legacy</layout>
+        </pluginRepository>
+
+        <pluginRepository>
+   	        <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+	        <url>http://download.java.net/maven/2/</url>
+        </pluginRepository>
     </pluginRepositories>
 
     <dependencies>
