Fixed inexistent dependency

--- a/master-webapp-pom/pom.xml
+++ b/master-webapp-pom/pom.xml
@@ -45,9 +45,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>uk.ac.ebi.intact</groupId>
+            <groupId>uk.ac.ebi.intact.core</groupId>
             <artifactId>intact-core</artifactId>
-            <version>1.6.1</version>
+            <version>1.8.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
