--- a/master-hibernate-pom/pom.xml
+++ b/master-hibernate-pom/pom.xml
@@ -205,13 +205,8 @@
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate</artifactId>
-            <version>3.2.4.sp1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.3.1.ga</version>
+            <version>3.3.2.Beta1</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -228,6 +223,11 @@
             <artifactId>hibernate-validator</artifactId>
             <version>3.0.0.ga</version>
         </dependency>
+        <dependency>
+    <groupId>jboss</groupId>
+    <artifactId>javassist</artifactId>
+    <version>3.6.ga</version>
+</dependency>
         <dependency>
             <groupId>c3p0</groupId>
             <artifactId>c3p0</artifactId>
