[IMA-5] Update hibernate-annotations to version 3.3.1.GA as the pom file in ibiblio and jboss maven repo define different sub dependencies causing errors

--- a/master-hibernate-pom/pom.xml
+++ b/master-hibernate-pom/pom.xml
@@ -206,28 +206,23 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.3.2.Beta1</version>
+            <version>3.3.2.GA</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-annotations</artifactId>
-            <version>3.3.0.ga</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-commons-annotations</artifactId>
-            <version>3.3.0.ga</version>
+            <version>3.3.1.GA</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>3.0.0.ga</version>
+            <version>3.0.0.GA</version>
         </dependency>
         <dependency>
-    <groupId>jboss</groupId>
-    <artifactId>javassist</artifactId>
-    <version>3.6.ga</version>
-</dependency>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.7.1.GA</version>
+        </dependency>
         <dependency>
             <groupId>c3p0</groupId>
             <artifactId>c3p0</artifactId>
