--- a/master-pom/pom.xml
+++ b/master-pom/pom.xml
@@ -308,6 +308,19 @@
                 <enabled>true</enabled>
             </releases>
         </repository>
+
+       <repository>
+            <id>jboss</id>
+            <name>JBoss Repository</name>
+            <url>http://repository.jboss.com/maven2/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+
     </repositories>
 
     <pluginRepositories>
