--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <artifactId>maven-poms</artifactId>
     <packaging>pom</packaging>
     <version>1.1-SNAPSHOT</version>
-    <name>Intact Maven :: Master POMs</name>
+    <name>Master POMs</name>
     <url>http://www.ebi.ac.uk/intact</url>
     <description>POM to build the master POMs</description>
 
