--- a/master-pom/pom.xml
+++ b/master-pom/pom.xml
@@ -13,12 +13,6 @@
         that is common to all projects.
     </description>
 
-    <scm>
-        <connection>scm:svn:https://intact.googlecode.com/svn/repo/maven/trunk/master-pom</connection>
-        <developerConnection>scm:svn:https://intact.googlecode.com/svn/repo/maven/trunk/master-pom</developerConnection>
-        <url>https://intact.googlecode.com/svn/repo/maven/trunk/master-pom</url>
-    </scm>
-
     <properties>
         <institution>ebi</institution>
         <deploy.host>bark.ebi.ac.uk</deploy.host>
@@ -28,25 +22,25 @@
 
     <developers>
         <developer>
-            <id>skerrien</id>
-            <name>Samuel Kerrien</name>
-            <email>skerrien@ebi.ac.uk</email>
+            <id>anjali</id>
+            <name>Anjali Shrivastava</name>
+            <email>anjali@ebi.ac.uk</email>
             <organization>IntAct - EBI</organization>
             <organizationUrl>http://www.ebi.ac.uk/intact</organizationUrl>
             <timezone>0</timezone>
         </developer>
         <developer>
-            <id>marine</id>
-            <name>Marine Dumousseau</name>
-            <email>marine@ebi.ac.uk</email>
+            <id>ntoro</id>
+            <name>Noemi Del Toro Ayllon</name>
+            <email>ntoro@ebi.ac.uk</email>
             <organization>IntAct - EBI</organization>
             <organizationUrl>http://www.ebi.ac.uk/intact</organizationUrl>
             <timezone>0</timezone>
         </developer>
         <developer>
-            <id>baranda</id>
-            <name>Bruno Aranda</name>
-            <email>baranda@ebi.ac.uk</email>
+            <id>mkoch</id>
+            <name>Maximilian Koch</name>
+            <email>mkoch@ebi.ac.uk</email>
             <organization>IntAct - EBI</organization>
             <organizationUrl>http://www.ebi.ac.uk/intact</organizationUrl>
             <timezone>0</timezone>
@@ -60,6 +54,27 @@
             <organization>MINT - University of Rome</organization>
             <organizationUrl>http://mint.bio.uniroma2.it/mint/</organizationUrl>
             <timezone>+1</timezone>
+        </contributor>
+        <contributor>
+            <name>Samuel Kerrien</name>
+            <email>skerrien@ebi.ac.uk</email>
+            <organization>IntAct - EBI</organization>
+            <organizationUrl>http://www.ebi.ac.uk/intact</organizationUrl>
+            <timezone>0</timezone>
+        </contributor>
+        <contributor>
+            <name>Marine Dumousseau</name>
+            <email>marine@ebi.ac.uk</email>
+            <organization>IntAct - EBI</organization>
+            <organizationUrl>http://www.ebi.ac.uk/intact</organizationUrl>
+            <timezone>0</timezone>
+        </contributor>
+        <contributor>
+            <name>Bruno Aranda</name>
+            <email>baranda@ebi.ac.uk</email>
+            <organization>IntAct - EBI</organization>
+            <organizationUrl>http://www.ebi.ac.uk/intact</organizationUrl>
+            <timezone>0</timezone>
         </contributor>
     </contributors>
 
@@ -145,7 +160,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.1</version>
+                    <version>2.5</version>
                     <configuration>
                         <goals>deploy</goals>
                     </configuration>
@@ -212,23 +227,7 @@
             </build>
         </profile>
     </profiles>
-
-    <repositories>
-        <repository>
-            <id>intact.nexus</id>
-            <name>IntAct Nexus</name>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>intact.nexus</id>
-            <name>IntAct Nexus</name>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
-
+    
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -239,36 +238,48 @@
     </dependencies>
 
     <!--  REPORTS -->
-
     <reporting>
         <plugins>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
+                <version>2.10.3</version>
             </plugin>
 
         </plugins>
 
     </reporting>
 
-    <distributionManagement>
+    <repositories>
         <repository>
-            <id>ebi-repo</id>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo</url>
+            <id>nexus-ebi-repo-old</id>
+            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo/</url>
         </repository>
+        <repository>
+            <id>nexus-ebi-release-repo</id>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
+        </repository>
+        <repository>
+            <id>nexus-ebi-snapshot-repo</id>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
+        </repository>
+    </repositories>
 
+    <!-- Overwrites the previous repositories-->
+    <distributionManagement>
+        <!-- EBI repo -->
+        <repository>
+            <id>pst-release</id>
+            <name>EBI Nexus Repository</name>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
+        </repository>
+        <!-- EBI SNAPSHOT repo -->
         <snapshotRepository>
-            <id>ebi-repo-snapshots</id>
-            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/repositories/ebi-repo-snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+            <id>pst-snapshots</id>
+            <name>EBI Nexus Snapshots Repository</name>
+            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
         </snapshotRepository>
-
-        <site>
-            <id>intact-site</id>
-            <name>Intact site</name>
-            <url>${site.remote.basedir}/${artifactId}</url>
-        </site>
     </distributionManagement>
-
 </project>
