--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>intact-master</artifactId>
     <packaging>pom</packaging>
     <name>Master POMs :: Master POM</name>
-    <version>23</version>
+    <version>24-SNAPSHOT</version>
 
     <description>This is a master POM that is meant to be used by the various Intact modules. It contains information
         that is common to all projects.
@@ -20,7 +20,7 @@
         <connection>scm:git:https://github.com/EBI-IntAct/maven-master.git</connection>
         <developerConnection>scm:git:https://github.com/EBI-IntAct/maven-master.git</developerConnection>
         <url>https://github.com/EBI-IntAct/maven-master</url>
-        <tag>intact-master-23</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
